# lifemax

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: daily_focus.md  deadline_nudges.md  dispatch_history.md  focus_timer.md  habit_streaks.md  health_badge.md  improvements_log.md  quote_of_day.md  weekly_retro.md
launchd/: com.lifemax.dashboard.plist
src/lifemax/: __init__.py  config.py  dispatch_history.py  habit_streaks.py  habits_store.py  intents.py  llm.py  logging_setup.py  main.py  models.py  store.py
src/lifemax/bot/: telegram_bot.py
src/lifemax/server/: api.py
src/lifemax/server/static/: app.js  index.html  styles.css
src/lifemax/widgets/: calendar_apple.py  focus.py  focus_timer.py  health.py  news_x.py  nudges.py  quotes.py  retro.py  time_utils.py  weather.py
tests/: conftest.py  test_dispatch_history.py  test_focus_timer.py  test_habits.py  test_health.py  test_intents.py  test_llm_schema.py  test_nudges.py  test_retro.py  test_store.py
