[project]
name = "lifemax-dashboard"
version = "0.1.0"
description = "Personal lifemax dashboard for a Mac mini: tasks, ambient info, AI feeds. Telegram + Claude-dispatch input."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
